--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,8 @@ services:
     name: qreclaim-api
     runtime: python
     plan: starter
-    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
-    preDeployCommand: 'if [ -n "$FIREBASE_ADMIN_KEY_JSON" ]; then printf %s "$FIREBASE_ADMIN_KEY_JSON" > firebaseAdminKey.json; python -c "import json; json.load(open(\"firebaseAdminKey.json\")); print(\"Firebase Admin JSON OK\")"; else echo "FIREBASE_ADMIN_KEY_JSON not set; skipping credentials file creation"; fi'
-    startCommand: gunicorn -w 2 -k gthread -b 0.0.0.0:$PORT app:app
+    buildCommand: pip install --no-cache-dir -r requirements.txt
+    startCommand: gunicorn -w 1 -k gthread --threads 4 -b 0.0.0.0:$PORT app:app
     healthCheckPath: /api/health
     envVars:
       - key: PYTHON_VERSION
@@ -29,13 +28,3 @@ envVarGroups:
         value: v1
       - key: FIREBASE_WEB_CONFIG_JSON
         sync: false
-      - key: QRECLAIM_NSFW_BLOCK_BORDERLINE
-        value: "true"
-      - key: QRECLAIM_NSFW_MODEL_PATH
-        sync: false
-      - key: USE_FIRESTORE_EMULATOR
-        value: "false"
-      - key: FIRESTORE_EMULATOR_HOST
-        value: localhost
-      - key: FIRESTORE_EMULATOR_PORT
-        value: 8080
