--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,21 @@ services:
     name: qreclaim-api
     runtime: python
     plan: starter
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: gunicorn -w 1 -k gthread --threads 4 -b 0.0.0.0:$PORT app:app
+    buildCommand: >-
+      pip install --upgrade pip &&
+      pip install \
+        Flask \
+        gunicorn \
+        flask-cors \
+        firebase-admin \
+        google-cloud-firestore \
+        google-cloud-storage \
+        cryptography \
+        numpy \
+        pillow \
+        python-dotenv
+    preDeployCommand: 'if [ -n "$FIREBASE_ADMIN_KEY_JSON" ]; then printf %s "$FIREBASE_ADMIN_KEY_JSON" > firebaseAdminKey.json; python -c "import json; json.load(open(\"firebaseAdminKey.json\")); print(\"Firebase Admin JSON OK\")"; else echo "FIREBASE_ADMIN_KEY_JSON not set; skipping credentials file creation"; fi'
+    startCommand: gunicorn -w 2 -k gthread -b 0.0.0.0:$PORT app:app
     healthCheckPath: /api/health
     envVars:
       - key: PYTHON_VERSION
@@ -28,3 +41,19 @@ envVarGroups:
         value: v1
       - key: FIREBASE_WEB_CONFIG_JSON
         sync: false
+      - key: QRECLAIM_NSFW_BLOCK_BORDERLINE
+        value: "true"
+      - key: QRECLAIM_NSFW_MODEL_PATH
+        sync: false
+      - key: QRECLAIM_AI_REMOTE_BASE_URL
+        value: https://lachelle-slinkier-marita.ngrok-free.dev
+      - key: AI_SERVICE_TOKEN
+        sync: false
+      - key: AI_REMOTE_FORCE
+        value: "true"
+      - key: USE_FIRESTORE_EMULATOR
+        value: "false"
+      - key: FIRESTORE_EMULATOR_HOST
+        value: localhost
+      - key: FIRESTORE_EMULATOR_PORT
+        value: 8080
